--- a/fundamentos/.gitignore
+++ b/fundamentos/.gitignore
@@ -1,3 +1,12 @@
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+
 # Logs
 logs
 *.log
