--- a/microservicios/demo/src/main/resources/application.properties
+++ b/microservicios/demo/src/main/resources/application.properties
@@ -9,4 +9,7 @@ logging.level.org.hibernate.SQL=debug
 
 mi.propia.clave=La mia
 
-spring.data.rest
+spring.data.rest.basePath=/auto
+
+
+server.servlet.contextPath=/
