--- a/microservicios/demo/src/main/resources/application.properties
+++ b/microservicios/demo/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.data.rest.basePath=/auto
 
 
 server.servlet.contextPath=/
+
+# Service registers under this name
+spring.application.name=demo-service
+# Discovery Server Access
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_URL:http://localhost:8761}/eureka/
